force-app/main/default/objects/Event_Attendees__c/Event_Attendees__c.object-meta.xml
<CustomObject>
    <label>Event Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>