force-app/main/default/objects/Event_Attendees__c/fields/AttendeeExtId__c.field-meta.xml
<CustomField>
    <fullName>AttendeeExtId__c</fullName>
    <externalId>true</externalId>
    <label>AttendeeExtId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>