force-app/main/default/objects/Event_Attendees__c/fields/Give_event_feedback__c.field-meta.xml
<CustomField>
    <fullName>Give_event_feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Give event feedback</label>
    <type>Checkbox</type>
</CustomField>