force-app/main/default/objects/Event_Attendees__c/fields/Give_Session_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Give_Session_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Give Session Feedback</label>
    <type>Checkbox</type>
</CustomField>