force-app/main/default/objects/Event_Attendees__c/fields/Is_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Is_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Speaker</label>
    <type>Checkbox</type>
</CustomField>