force-app/main/default/objects/Event_Attendees__c/fields/Met_a_speaker__c.field-meta.xml
<CustomField>
    <fullName>Met_a_speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met a speaker</label>
    <type>Checkbox</type>
</CustomField>