force-app/main/default/objects/Event_Attendees__c/fields/Met_a_volunteer__c.field-meta.xml
<CustomField>
    <fullName>Met_a_volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met a volunteer</label>
    <type>Checkbox</type>
</CustomField>