force-app/main/default/objects/Event_Attendees__c/fields/Number_of_people_met__c.field-meta.xml
<CustomField>
    <fullName>Number_of_people_met__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of people met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>