force-app/main/default/objects/Event_Attendees__c/fields/Number_of_sessions_attended__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sessions_attended__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of sessions attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>