force-app/main/default/objects/Event_Attendees__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone number</label>
    <type>Phone</type>
</CustomField>