force-app/main/default/objects/Event_Attendees__c/fields/Play_a_game__c.field-meta.xml
<CustomField>
    <fullName>Play_a_game__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Play a game</label>
    <type>Checkbox</type>
</CustomField>