force-app/main/default/objects/Event_Attendees__c/fields/Pre_Registered__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Registered</label>
    <type>Checkbox</type>
</CustomField>