force-app/main/default/objects/Event_Attendees__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>