force-app/main/default/objects/Event_Attendees__c/fields/Trailblazer_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Event__c</fullName>
    <label>Trailblazer Event</label>
    <referenceTo>Trailblazer_Event__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>