force-app/main/default/objects/Event_Attendees__c/fields/Tweet__c.field-meta.xml
<CustomField>
    <fullName>Tweet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tweet</label>
    <type>Checkbox</type>
</CustomField>