force-app/main/default/objects/Event_Attendees__c/fields/Twitter_handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_handle__c</fullName>
    <label>Twitter handle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>