force-app/main/default/objects/Event_Attendees__c/fields/Updated_Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Updated_Twitter_Handle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Twitter Handle</label>
    <type>Checkbox</type>
</CustomField>