force-app/main/default/objects/Event_Attendees__c/fields/Visited_a_Booth__c.field-meta.xml
<CustomField>
    <fullName>Visited_a_Booth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited a Booth</label>
    <type>Checkbox</type>
</CustomField>