force-app/main/default/objects/Event_Attendees__c/fields/Vote_for_a_session__c.field-meta.xml
<CustomField>
    <fullName>Vote_for_a_session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vote for a session</label>
    <type>Checkbox</type>
</CustomField>