force-app/main/default/objects/Event_Attendees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Trailblazer_Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>